[package]
name = "pixelflut"
version = "0.1.0"
authors = ["Jens Hegner Stærmose <jensstaermose@hotmail.com>"]
edition = "2018"

[dependencies]
termion = "1.5.5"
rand = "0.7.3"
byteorder = "1.3.4"
numtoa = "0.2.3"
criterion = "0.3.3"
bitvec = "0.18.1"

[profile.release]
debug = true

[[bench]]
name = "my_benchmark"
harness = false